<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adrenergic.tremorsense.home">

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#FFBBBBBB" />

    <ImageView
        android:layout_width="256dp"
        android:layout_height="303dp"
        android:layout_gravity="left|bottom"
        android:src="@mipmap/bg_ts"
        android:alpha="0.1"
        android:adjustViewBounds="false"
        android:longClickable="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/ts_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/homeTitleString"
            android:textColor="#ff444444"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textIsSelectable="false"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome to TremorSense. To get started, please select an option below."
            android:layout_margin="20dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="#FFAAAAAA"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle"
            android:layout_marginBottom="20dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageButton
                android:src="@drawable/ic_quickrec"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:onClick="startAccelActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_record_accel_data"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageButton
                android:src="@drawable/ic_fullrec"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:onClick="startFullActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_fullrec_setup"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageButton
                android:src="@drawable/ic_custrec"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:onClick="startCustomActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_custrec_setup"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="20dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageButton
                android:src="@drawable/ic_profile"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:onClick="startProfileActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_profile_setup"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageButton
                android:src="@drawable/ic_info"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:onClick="startInfoActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_info"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageButton
                android:src="@drawable/ic_settings"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:onClick="startSettingsActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_settings"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>
</FrameLayout>